[package]
name = "json-tools"
version = "0.1.0"
edition = "2021"
authors = ["Laurids Renk"]
description = "some simple JSON transform tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "1.0.37"
